# unsloth-train

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
script/: convert_dataset_from_tmpco.py  eval_latex_table_correct_rate.py  install-pandoc.sh
src/: train.py
unsloth_train/: __main__.py  _patch.py  make_dataset.py  save_to_gguf.py  test_website.py  train.py  train_vision.py  utils.py
